--- a/example_config.json
+++ b/example_config.json
@@ -2,11 +2,6 @@
     "testdata_path": "example_input/qa.jsonl",
     "results_dir": "example_results/experiment<TIMESTAMP>",
     "requested_metrics": ["gpt_groundedness", "gpt_relevance", "gpt_coherence", "answer_length", "latency"],
-    "target_url": "https://webapp-backend-ai-dev.azurewebsites.net/",
-    "target_parameters": {
-        "overrides": {
-            "semantic_ranker": false,
-            "prompt_template": "<READFILE>example_input/prompt_refined.txt"
-        }
-    }
+    "target_url": "https://webapp-backend-ai-dev.azurewebsites.net/chat",
+
 }
