--- a/example_config_orig.json
+++ b/example_config_orig.json
@@ -2,6 +2,6 @@
     "testdata_path": "example_input/qa.jsonl",
     "results_dir": "example_results/experiment<TIMESTAMP>",
     "requested_metrics": ["gpt_groundedness", "gpt_relevance", "gpt_coherence", "answer_length", "latency"],
-    "target_url": "https://openaiserviceprod.openai.azure.com/openai/deployments/gpt-4/chat/completions?api-version=2024-02-15-preview"
+    "target_url": "https://webapp-backend-ai-dev.azurewebsites.net/chat"
 
 }
