--- a/example_config.json
+++ b/example_config.json
@@ -2,7 +2,20 @@
     "testdata_path": "example_input/qa.jsonl",
     "results_dir": "example_results/experiment<TIMESTAMP>",
     "requested_metrics": ["gpt_groundedness", "gpt_relevance", "gpt_coherence", "answer_length", "latency"],
-    "target_url": "https://openaiserviceprod.openai.azure.com/openai/deployments/gpt-4/chat/completions?api-version=2024-02-15-preview"
-                   
+    "target_url": "https://openaiserviceprod.openai.azure.com/openai/deployments/gpt-4/chat/completions?api-version=2024-02-15-preview",
+    "target_parameters": {
+        "overrides": {
+            "top": 3,
+            "retrieval_mode": "text",
+            "semantic_ranker": false,
+            "semantic_captions": false,
+            "suggest_followup_questions": false,
+            "use_oid_security_filter": false,
+            "use_groups_security_filter": false,
+            "vector_fields": ["embedding"],
+            "use_gpt4v": false,
+            "gpt4v_input": "textAndImages"
+        }
+    }              
 
 }
