--- a/example_config.json
+++ b/example_config.json
@@ -3,7 +3,7 @@
     "results_dir": "example_results/experiment<TIMESTAMP>",
     "requested_metrics": ["gpt_groundedness", "gpt_relevance", "gpt_coherence", "answer_length", "latency"],
     "target_url": "https://openaiserviceprod.openai.azure.com/openai/deployments/gpt-4/chat/completions?api-version=2024-02-15-preview",
-    "target_parameters": {
+    "parameters": {
         "overrides": {
             "top": 3,
             "retrieval_mode": "text",
